fix horizontal scroll and not found text

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,6 @@
 
 #root {
   background-color: rgb(245, 245, 245);
-  min-width: 100vw;
-  min-height: 100vh;
 }
 @font-face {
   font-family: 'UniNeue';
